working on list events page, front page, and currently trying to get the date shift issue solved

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -137,15 +137,16 @@ h3 {
     text-align: center;
     font-size: 20pt;
     padding: 20px 0px;
-    color: #c2dfa6;
+    color: white;
     border-radius: 5px;
     border: 3px solid #c2dfa6;
 }
 #home-info-section .info-items i {
     font-size: 80pt;
 }
-/*#home-info-section .row > div:nth-child(1) .info-items {
+#home-info-section .row > div:nth-child(1) .info-items {
     background-color: #cbdfa8;
+    color: #585858;
 }
 #home-info-section .row > div:nth-child(2) .info-items {
     background-color: #9fd1b8;
@@ -155,7 +156,7 @@ h3 {
 }
 #home-info-section .row > div:nth-child(4) .info-items {
     background-color: #118c4e;
-}*/
+}
 
 
 
@@ -297,13 +298,22 @@ h3 {
 .time-names-hover > .names-row {
 
 }
-
 .time-names-hover > #time-names-total {
     font-weight: bold;
 }
 
 #modal-share #share-add-holder {
     text-align: right;
+}
+
+#modal-share .share-sections {
+    margin-bottom: 25px;
+}
+#modal-share .share-sections > .share-titles {
+    margin-bottom: 5px;
+}
+#modal-share .share-sections > .share-email {
+    margin-bottom: 10px;
 }
 
 /* REVIEW PAGE - END */
